Fix navigation bar for mobile devices
I fixed the CSS for the navigation bar when the screen is super small.
I added a solid background and fixed the logo so that it shows correctly
and is truncated with ellipsis when the screen is too small.

--- a/themes/normal/assets/css/main.css
+++ b/themes/normal/assets/css/main.css
@@ -241,12 +241,14 @@ main {
   }
 
   nav {
-    > div {
-      justify-content: flex-end !important;
-    }
+    background-color: #033f57 !important;
 
-    .logo {
-      display: none;
+    > div {
+      .logo {
+        margin-left: 8px;
+        text-overflow: ellipsis;
+        overflow: hidden;
+      }
     }
   }
 
